# bug-basher

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
src/investigator/: agent.py  reporter.py  triage.py
src/shared/: backstage_client.py  cli.py  config.py  github_client.py  jira_client.py  models.py  slack_client.py
src/tests/: conftest.py  test_agent.py  test_backstage_client.py  test_cli.py  test_config.py  test_github_client.py  test_jira_client.py  test_reporter.py  test_slack_client.py  test_triage.py
